Crash while entering edit mode if the object has subsurf and is child of another object with a bool modifier #46720

Closed
opened 2015-11-07 17:31:58 +01:00 by Alessandro Sala · 21 comments

System Information
Windows 7 Pro SP1, NVIDIA GeForce GT 750M

Blender Version
Broken: 2.76b f337fea
Worked: Don't know

Short description of error
Blender crashes when entering edit mode if the object being edited, let's call it A, has a subsurf modifier and it is child of another mesh which has a bool modifier whose "Object" is A (a bit confusing, I know, see attached .blend)
Besides, on startup the bool modifier dosen't work: you have to make some editing action (e.g. disable/enable some modifier, enter/exit edit mode and so on) to "activate" it

Exact steps for others to reproduce the error
Open the attached .blend file, and you can see the bool modifier does not work. Press TAB and Blender crashes.
If you disable the subsurf modifier, the crash doesn't happen.

Crash editing child with subsurf and bool modifier on parent.blend

**System Information** Windows 7 Pro SP1, NVIDIA GeForce GT 750M **Blender Version** Broken: 2.76b f337fea Worked: Don't know **Short description of error** Blender crashes when entering edit mode if the object being edited, let's call it **A**, has a subsurf modifier and it is child of another mesh which has a bool modifier whose "Object" is **A** (a bit confusing, I know, see attached .blend) Besides, on startup the bool modifier dosen't work: you have to make some editing action (e.g. disable/enable some modifier, enter/exit edit mode and so on) to "activate" it **Exact steps for others to reproduce the error** Open the attached .blend file, and you can see the bool modifier does not work. Press TAB and Blender crashes. If you disable the subsurf modifier, the crash doesn't happen. [Crash editing child with subsurf and bool modifier on parent.blend](https://archive.blender.org/developer/F253653/Crash_editing_child_with_subsurf_and_bool_modifier_on_parent.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @xela-1

Added subscriber: @xela-1
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

I can confirm here

I can confirm here

Added subscriber: @Sergey

Added subscriber: @Sergey

Please do a test with latest builds from https://builder.blender.org/download/

With those ones i can't reproduce the reported crash so it might have been fixed already in git.

Please do a test with latest builds from https://builder.blender.org/download/ With those ones i can't reproduce the reported crash so it might have been fixed already in git.
Member

Yep works fine here

Yep works fine here

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sergey Sharybin self-assigned this 2015-11-08 04:06:48 +01:00

Ok,considering the issue to be resolved then :)

Ok,considering the issue to be resolved then :)
Member

However, I still get crashes after a applying modifier and undoing and applying again with the sub surf may have to repeat a couple of times

However, I still get crashes after a applying modifier and undoing and applying again with the sub surf may have to repeat a couple of times

What are the exact steps of reproducing that crash?

What are the exact steps of reproducing that crash?

Yes, I confirm that with build 2.75 5f95a4f it works.

However, upon startup, the bool modifier still does not work until you do some editing action.
And, as Aaron said, you can still crash Blender by following this simple procedure:

  • Open the attached .blend file
  • Press TAB twice (enter and immediately exit edit mode)
  • Apply the subsurf modifier
  • If Blender has not already crashed (sometimes it happens at this point), press CTRL-Z (undo)

Apply the subsurf again: blender crashes immediately

Yes, I confirm that with build 2.75 5f95a4f it works. However, upon startup, the bool modifier still does not work until you do some editing action. And, as Aaron said, you can still crash Blender by following this simple procedure: - Open the attached .blend file - Press TAB twice (enter and immediately exit edit mode) - Apply the subsurf modifier - If Blender has not already crashed (sometimes it happens at this point), press CTRL-Z (undo) # Apply the subsurf again: blender crashes immediately
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Member

I am reopening since it appears that their is something going on here still

I am reopening since it appears that their is something going on here still

Sorry, I meant 2.76 5f95a4f !

Sorry, I meant 2.7**6** 5f95a4f !

In #46720#345753, @Blendify wrote:
However, I still get crashes after a applying modifier and undoing and applying again with the sub surf may have to repeat a couple of times

Upon further testing, I can confirm Aaron's comment: sometimes you have to repeat steps 4 and 5 several times in a row to crash Blender.

> In #46720#345753, @Blendify wrote: > However, I still get crashes after a applying modifier and undoing and applying again with the sub surf may have to repeat a couple of times Upon further testing, I can confirm Aaron's comment: sometimes you have to repeat steps 4 and 5 several times in a row to crash Blender.

This issue was referenced by 3b38fd6bf9

This issue was referenced by 3b38fd6bf92cd9abc502346198e54191a247e860

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

I can confirm that with 2.76 5693337 the crash is gone.
But the boolean modifier still does not display on startup, and also after entering and exiting edit mode on the child sphere.

I can confirm that with 2.76 5693337 the crash is gone. But the boolean modifier still does not display on startup, and also after entering and exiting edit mode on the child sphere.

Do I have to open a new bug report?

Do I have to open a new bug report?
Member

@xela-1 go ahead since it is a different issue

@xela-1 go ahead since it is a different issue
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46720
No description provided.