Fix T46720: Crash applying subsurf modifier

Freeing a modifier that had data in the derived mesh could crash
(applying or removing).